@@ -1,5 +1,6 @@
 0.8.16
 ------
+  * Take framebuffer size into account for calibrate
   * Bugfix: use device from /etc/fstab to mount / and /boot
   * Bugfix: use proper regexp in multipath.conf
 
